--- a/style.css
+++ b/style.css
@@ -17,10 +17,7 @@ body {
   padding: 20px;
   transition: 0.3s;
   box-shadow: 0px 0px 10px 10px #333;
-}
-
-#button:hover {
-  background-color: #333;
+  background-image: url("123.jpg");
 }
 
 
@@ -160,5 +157,13 @@ p {
    .naslov  {
      margin: 0;
      margin-top: 5px;
+   }
+
+   .box {
+     width: 90%;
+   }
+
+   .naslov {
+     font-size: 30px;
    }
 }
