--- a/style.css
+++ b/style.css
@@ -7,13 +7,17 @@ body {
     font-family:sans-serif;
 }
 
-
+.naslov {
+  letter-spacing: 3px;
+  padding-top: 3px;
+}
 
 #button {
+  letter-spacing: 2px;
   color: #999;
   cursor: pointer;
   border-radius: 10px;
-  border: 1px solid #999;
+  border: 2px solid #999;
   padding: 20px;
   transition: 0.3s;
   box-shadow: 0px 0px 10px 10px #333;
@@ -89,13 +93,18 @@ p {
   padding-top: 0px;
 }
 
+hr {
+  box-shadow: 0px 0px 10px 10px #333;
+}
+
 
 .box {
-    background-color: #333;
+    background-image: url("1.jpg");
+    border: 2px #222 solid;
     width: 350px;
     height: 270px;
     border-radius: 5px 5px 20px 20px;
-    border-bottom: 2px solid gray;
+    border-bottom: 3px solid gray;
     box-shadow: 0px 10px 10px 10px black;
 }
 
@@ -109,7 +118,8 @@ p {
     width: 280px;
     transition: 1s;
     border-radius: 5px 5px 20px 20px;
-    border: 1px solid white;
+    
+    box-shadow: 0px 0px 20px 20px #222;
 }
 
 .linkimg2 {
@@ -157,13 +167,12 @@ p {
    .naslov  {
      margin: 0;
      margin-top: 5px;
+     font-size: 30px;
    }
 
    .box {
      width: 90%;
+     height: 300px;
    }
 
-   .naslov {
-     font-size: 30px;
-   }
 }
