--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     background-color: #111;
-    color: #999;
+    color: #333;
     font-size: large;
     font-family:sans-serif;
 }
@@ -14,7 +14,6 @@ body {
 
 #button {
   letter-spacing: 2px;
-  color: #999;
   cursor: pointer;
   border-radius: 10px;
   border: 2px solid #999;
@@ -26,7 +25,6 @@ body {
 
 
 h1 {
-    color: #999;
     text-align: center;
     transition: 1s;
 }
@@ -69,11 +67,11 @@ p {
 }
 
 #ama {
+  color: #999;
   float: right;
   padding: 10px;
   margin-top: 7px;
   text-decoration: none;
-  color: white;
   transition: 1s;
   border-radius: 10px;
   border: 1px solid white;
@@ -113,7 +111,6 @@ hr {
 }
 
 .links {
-  display:flex;
   width: 90%;
   justify-content: center;
 }
@@ -128,17 +125,12 @@ hr {
     width: 280px;
     transition: 1s;
     border-radius: 5px 5px 20px 20px;
-    
-    box-shadow: 0px 0px 20px 20px #222;
+    margin: 0;
+    margin-top: 10px;
+    box-shadow: 0px 0px 20px 20px black;
 }
 
-.linkimg2 {
-    height: 180px;
-    width: 310px;
-    transition: 1s;
-    border-radius: 5px 5px 20px 20px;
-    border: 1px solid blue;
-}
+
 
 .linkimg:hover {
     height: 180px;
@@ -156,7 +148,6 @@ hr {
   .cr {
       border-radius: 15px 15px 0px 0px;
       font-size: 13px;
-      color: #999;
       height: 40px;
       padding-top: 23px;
       text-align: center;
@@ -164,6 +155,7 @@ hr {
       margin-top: 20px;
       margin-bottom: 0;
       background-color: #222;
+
   }
 
 
@@ -182,7 +174,7 @@ hr {
 
    .box {
      width: 90%;
-     height: 300px;
+     height: 280px;
      margin-right: 0;
      margin-left: 0;
      
