--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ hr {
 /* Footer */
 
 
+
   
   .cr {
       border-radius: 15px 15px 0px 0px;
@@ -155,13 +156,14 @@ hr {
       margin-top: 20px;
       margin-bottom: 0;
       background-color: #222;
-
+      padding: 10px;
+      box-shadow: 0px 0px 10px 10px black;
   }
 
 
 /* Phone View */
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 600px) {
    header {
      height: 50px;
    }
