--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ hr {
       bottom: 0;
       margin-top: 20px;
       margin-bottom: 0;
-      background-color: #222;
+      background-color: rgba(34, 34, 34, 0.445);
       padding: 10px;
       box-shadow: 0px 0px 10px 10px black;
   }
