--- a/style.css
+++ b/style.css
@@ -161,6 +161,69 @@ hr {
   }
 
 
+
+
+
+  
+  .container {
+    margin: 20px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    position: relative;
+    height: 50vh;
+    overflow: hidden;
+    animation: animate 4s linear infinite;
+    border-radius: 40px;
+    box-shadow: 0px 0px 10px 10px black;
+  }
+  
+  /* Hexagon using clip-path */
+  .hexagon {
+    position: relative;
+    width: 100px;
+    height: 110px;
+    background: #111;
+    margin: 1px;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    transition: 2s;
+  }
+  
+  .hexagon:hover {
+    transition: 0s;
+    background: #0f0;
+  }
+  
+  .hexagon:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    pointer-events: none;
+    background: rgba(255, 255, 255, 0.02);
+  }
+  
+  .row {
+    display: inline-flex;
+    margin-top: -32px;
+    margin-left: -50px;
+  }
+  
+  .row:nth-child(even) {
+    margin-left: 1px;
+  }
+  
+  @keyframes animate {
+    0% {
+      filter: hue-rotate(0deg);
+    }
+    100% {
+      filter: hue-rotate(360deg);
+    }
+  }
+  
+  
 /* Phone View */
 
 @media only screen and (max-width: 600px) {
