--- a/style.css
+++ b/style.css
@@ -7,20 +7,21 @@ body {
     font-family:sans-serif;
 }
 
+
+
+header {
+  display: flex;
+  width: 100%;
+  border-radius: 0px 0px 40px 40px;
+  border-bottom: 2px solid gray;
+  box-shadow: 0px 0px 20px 20px black;
+  background-image: url("123.jpg");
+  transition: 1s;
+}
+
 .naslov {
   letter-spacing: 3px;
   padding-top: 3px;
-}
-
-#button {
-  letter-spacing: 2px;
-  cursor: pointer;
-  border-radius: 10px;
-  border: 2px solid #999;
-  padding: 20px;
-  transition: 0.3s;
-  box-shadow: 0px 0px 10px 10px #333;
-  background-image: url("123.jpg");
 }
 
 
@@ -33,16 +34,6 @@ h1:hover {
   color: white;
 }
 
-
-header {
-    display: flex;
-    width: 100%;
-    border-radius: 0px 0px 40px 40px;
-    border-bottom: 2px solid gray;
-    box-shadow: 0px 0px 20px 20px black;
-    background-image: url("123.jpg");
-    transition: 1s;
-}
 
 .center {
     display: flex;
@@ -78,8 +69,6 @@ p {
   box-shadow: 0px 0px 3px 3px #888;
 }
 
-
-
 #aboutme2 {
   border-radius: 30px 10px 30px 10px;
   border: 3px solid #555;
@@ -95,6 +84,8 @@ hr {
   box-shadow: 0px 0px 10px 10px #333;
 }
 
+
+/* Projects */
 
 .box {
     background-image: url("1.jpg");
@@ -130,8 +121,6 @@ hr {
     box-shadow: 0px 0px 20px 20px black;
 }
 
-
-
 .linkimg:hover {
     height: 180px;
  
@@ -139,13 +128,20 @@ hr {
 
 
 
+.back {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 50%;
+  cursor: pointer;
+  margin: 50px;
+  box-shadow: 0px 0px 10px 10px black;
+}
+
+
 
 
 /* Footer */
-
-
-
-  
   .cr {
       border-radius: 15px 15px 0px 0px;
       font-size: 13px;
@@ -183,8 +179,6 @@ hr {
      height: 270px;
      margin-right: 0;
      margin-left: 0;
-     
-     
    }
 
    .linkimg {
