--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ hr {
       background-color: rgba(34, 34, 34, 0.445);
       padding: 10px;
       box-shadow: 0px 0px 10px 10px black;
+      width: 200px;
   }
 
 
@@ -174,18 +175,11 @@ hr {
      font-size: 30px;
    }
 
-   .box {
-     width: 95%;
-     height: 270px;
-     margin-right: 0;
-     margin-left: 0;
-   }
 
-   .linkimg {
-     width: 90%;
-   }
+ 
 
    .links {
      display: block;
    }
+
 }
