--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ hr {
   .cr {
       border-radius: 15px 15px 0px 0px;
       font-size: 13px;
+      width: 100%;
       height: 40px;
       padding-top: 23px;
       text-align: center;
@@ -154,7 +155,7 @@ hr {
       background-color: rgba(34, 34, 34, 0.445);
       padding: 10px;
       box-shadow: 0px 0px 10px 10px black;
-      width: 200px;
+
   }
 
 
