--- a/style.css
+++ b/style.css
@@ -17,6 +17,23 @@
   object-fit: cover;
 }
 
+/* Izgled skrol trake */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgb(208, 232, 255);;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(77, 164, 250);;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(61, 82, 172);
+}
+
 
 body {
     margin: 0;
@@ -25,6 +42,7 @@ body {
     background-size: cover;
     color: white;
     overflow-x: hidden;
+    user-select: none;
 }
 .naslov {
     text-align: center;
@@ -274,7 +292,7 @@ nav .menu.active span:nth-child(2) {
 
   height: 100%;
   margin: 0;
-  padding-top: 400px;
+  padding-top: 300px;
 }
 #loader {
   transition: 1s;
