--- a/style.css
+++ b/style.css
@@ -21,15 +21,12 @@
 ::-webkit-scrollbar {
   width: 4px;
 }
-
 ::-webkit-scrollbar-track {
   background-color: rgb(208, 232, 255);;
 }
-
 ::-webkit-scrollbar-thumb {
   background-color: rgb(77, 164, 250);;
 }
-
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgb(61, 82, 172);
 }
@@ -308,7 +305,6 @@ nav .menu.active span:nth-child(2) {
     opacity: 0;
   }
 }
-
 .loader {
 
   transform: rotateZ(45deg);
@@ -384,18 +380,40 @@ nav .menu.active span:nth-child(2) {
 
 
 
+footer {
+  width: 100%;
+  height: 150px;
+  background-color: #002b649f;
+  margin-top: 100px;
+  border-top: 1px solid white;
+  padding: 20px;
+}
+
+.footer_text {
+  font-size: 25px;
+  margin-top: 150px;
+}
+
+.bottom {
+  text-align: center;
+  position: relative;
+  bottom: -60px;
+  margin: 10px;
+}
+
+
 
 .logo_img {
   width: 40%;
-  margin-top: 150px;
+  margin-bottom: 20px;
   border: 1px solid white;
   border-radius: 20px 40px;
   box-shadow: 0px 0px 10px 0px rgb(83, 172, 255);
+  transition: 0.5s;
 }
 
 .logo_img:hover {
-  rotate: 360deg;
-  transition: 0.5s;
+  transform: rotateY(180deg);
 }
 
 .center, .center_div {
@@ -439,4 +457,134 @@ nav .menu.active span:nth-child(2) {
   padding: 5px;
   margin: 5px;
 }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.navigation {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+.menuToggle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-color: #032d88cc;;
+  border: 3px solid white;
+  border-radius: 70px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.15);
+}
+
+.menuToggle::before {
+  content: '+';
+  position: absolute;
+  font-size: 2.8em;
+  font-weight: 550;
+  color: #ffffff;
+  transition: 1.5s;
+}
+
+.menuToggle.active::before {
+  transform: rotate(315deg);
+}
+
+.menu_social {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: #032d88cc;
+  border: 1px solid rgba(255, 255, 255, 0.404);
+  border-radius: 70px;
+  z-index: -1;
+  transition: transform 0.5s, width 0.5s, height 0.5s;
+  transition-delay: 1s, 0.5s, 0.5s;
+  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.menuToggle.active~.menu_social {
+  width: 270px;
+  height: 70px;
+  z-index: 1;
+  transform: translateY(-80px);
+  transition-delay: 0s, 0.5s, 0.5s;
+  box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
+}
+
+.menu_social::before {
+  content: '';
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  background: #032d8859;
+  
+  left: calc(50% - 8px);
+  bottom: 4px;
+  transform: rotate(45deg);
+  border-radius: 2px;
+  transition: 0.5s;
+}
+
+.menuToggle.active~.menu_social::before {
+  transition-delay: 0.5s;
+  bottom: -6px;
+}
+
+.menu_social ul {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  gap: 20px;
+}
+
+.menu_social ul li {
+  list-style: none;
+  cursor: pointer;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-30px);
+  transition: 0.25s;
+  transition-delay: calc(0s + var(--i));
+}
+
+.menuToggle.active~.menu_social ul li {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0px);
+  transition-delay: calc(0.75s + var(--i));
+}
+
+.menu_social ul li a {
+  display: block;
+  font-size: 2.2em;
+}
+
+.icon {
+  padding: 5px;
+  padding-bottom: 10px;
+  width: 70px;
+  transition: 0.3s;
+}
+
+.icon:hover {
+  width: 80px;
 }
