--- a/style.css
+++ b/style.css
@@ -382,7 +382,7 @@ nav .menu.active span:nth-child(2) {
 
 footer {
   width: 100%;
-  height: 150px;
+  height: 100px;
   background-color: #002b649f;
   margin-top: 100px;
   border-top: 1px solid white;
@@ -397,8 +397,9 @@ footer {
 .bottom {
   text-align: center;
   position: relative;
-  bottom: -60px;
+  bottom: -50px;
   margin: 10px;
+  font-size: 13px;
 }
 
 
@@ -584,4 +585,13 @@ footer {
   width: 70px;
   transition: 0.3s;
 }
+
+
+
+
+
+
+
+
+
 
